#20 - сделаны роли ansible

--- a/gitlab-ci/terraform/inventory.tmpl
+++ b/gitlab-ci/terraform/inventory.tmpl
@@ -1,4 +1,4 @@
 [docker]
-%{ for index, addr in extip ~}
+%{ for index, address in extip ~}
 ${name[index]} ansible_host=${extip[index]}
 %{ endfor ~}
